feat: add CMS blocks API
