# laravel/app/Models/CmsBlock.php
@@ -1,0 +1,10 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Model;
+
+class CmsBlock extends Model
+{
+    protected $fillable = ['key', 'type', 'value'];
+}
